--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@
     max-width: 1920px;
     width: 100%;
     background-color:black;
-    height: 2189px;
+    /* height: 2189px; */
 }
 
 .black-div2 {
@@ -102,7 +102,7 @@
 .white-div {
     max-width: 1920px;
     width: 100%;
-    height: 2000px;
+    /* height: 2000px; */
 }
 
 .image8 {
@@ -171,3 +171,64 @@
     font-size: 35px;
 }
 
+.enquire {
+    margin-top: 100px;
+    text-align: center;
+    font-size: 35px;
+}
+
+.enquire-p {
+    margin-bottom: 30px;
+}
+
+.divider3 {
+    max-width: 500px;
+    width: 100%;
+    height: 2px;
+    background-color: #FA6A18;
+    margin: 0 auto;
+    margin-top: 30px;
+}
+
+.divider4 {
+    max-width: 300px;
+    width: 100%;
+    height: 2px;
+    background-color: #FA6A18;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+.talk {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 250px;
+}
+
+.talktome {
+    font-size: 90px;
+}
+
+.ideas, .collab {
+    font-size:50px
+}
+
+.collab {
+    margin-bottom: 70px;
+}
+
+.collab1 {
+    font-size: 14px;
+   margin-bottom: 30px;
+}
+
+.collab2 {
+    font-size: 14px;
+   
+}
+
+.textcollab {
+    max-width: 300px ;
+    margin:0 auto;
+}
