--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@
 /* white div */
 
 .white-div {
+    background-color: #E8E8E8;
     max-width: 1920px;
     width: 100%;
     /* height: 2000px; */
@@ -231,4 +232,38 @@
 .textcollab {
     max-width: 300px ;
     margin:0 auto;
+    margin-bottom: 100px;
 }
+
+/* second black div section */
+
+.blackdiv-2 {
+    background-color: black;
+    height: 700px;
+}
+
+.check {
+    color: #FA6A18;
+    font-size: 30px;
+    padding-top: 100px;
+    padding-left: 80px;
+}
+
+.footer {
+    width: 200px;
+    width: 100%;
+    padding-left: 600px;
+}
+
+.footer-h3 {
+    color: white;
+    margin-bottom: 20px;
+    font-size: 60px;
+}
+
+.footer-p {
+    color: white;
+   margin-top: 50px;
+   width: 300px;
+}
+
