--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,57 @@
     width: 100%;
     height: 1080px;
     background-image: url(../img/bgimage1.jpg);
+    position: relative;
+}
+ 
+
+.nav-ul {
+    display: flex;
+    justify-content: space-around; 
 }
 
+.ul-li {
+    color: white;
+    font-size: 20px;
+}
 
+.aboutsarah {
+    position: absolute;
+    color: white;
+    font-size: 100px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.somedetails {
+    position: absolute;
+    top: 200px;
+    right: 100px;
+    font-size: 50px;
+    color: white;
+    letter-spacing: 20px;
+}
+
+.arrowdiv {
+    position: absolute;
+    bottom: 200px;
+    right: 100px;
+    color: white;
+    font-size: 40px;
+}
+
+.ellipse {
+    position: absolute;
+    bottom: 110px;
+    right: 50px
+}
+
+.bgpath {
+    position: absolute;
+    left: 200px;
+    top: 300px;
+}
 /* პირველი სექციის სტილები */
 .section1-div {
     max-width: 1920px;
