--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,14 @@
 .nav-ul {
     display: flex;
     justify-content: space-around; 
+    padding-top: 30px;
+    letter-spacing: 7px;
 }
 
 .ul-li {
     color: white;
     font-size: 20px;
+    font-family: 'Playfair Display';
 }
 
 .aboutsarah {
@@ -24,6 +27,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-family: 'Playfair Display';
 }
 
 .somedetails {
@@ -33,14 +37,17 @@
     font-size: 50px;
     color: white;
     letter-spacing: 20px;
+    font-family: 'Cormorant Unicase';
 }
 
 .arrowdiv {
     position: absolute;
-    bottom: 200px;
-    right: 100px;
+    bottom: 250px;
+    right: 120px;
     color: white;
-    font-size: 40px;
+    font-size: 20px;
+    font-family: 'Rajdhani';
+    letter-spacing: 15px;
 }
 
 .ellipse {
@@ -66,6 +73,7 @@
     margin-top: 125px;
     margin-bottom: 125px;
     max-width: 100px;
+    font-family: 'Playfair Display';
 
 }
 
@@ -73,6 +81,7 @@
    font-size: 115px; 
    margin: 0 auto;
    max-width:900px ;
+   font-family: 'Playfair Display';
    
 
 }
@@ -80,7 +89,8 @@
 .proffesion {
     font-size: 80px;
     max-width: 1200px;
-    margin: 0 auto;
+    text-align: center;
+    font-family: 'Playfair Display';
 
 }
 
@@ -91,6 +101,7 @@
     margin: 0 auto;
     margin-top: 43px;
     margin-bottom: 45px;
+    font-family: 'Playfair Display';
 }
 
 .divider {
@@ -106,6 +117,7 @@
     margin: 0 auto;
     margin-bottom: 130px;
     margin-top: 130px;
+    font-family: 'Cormorant Unicase';
 }
 
 .p1 {
@@ -133,18 +145,23 @@
     margin-bottom: 50px;
     font-size: 35px;
     text-align: center;
+    font-family: 'Playfair Display';
 }
 
 .black-h5 {
     padding-top: 200px;
     font-size: 60px;
     text-align: center;
+    font-family: 'Playfair Display';
 }
 
 .black-h4, .black-h5, .black-p {
     color: white;
 }
 
+.black-p {
+    font-family: 'Cormorant Unicase';
+}
 /* white div */
 
 .white-div {
@@ -171,6 +188,7 @@
     text-align: center;
     padding-top: 50px;
     font-size: 40px;
+    font-family: 'Playfair Display';
 }
 
 .black-divider {
@@ -196,6 +214,7 @@
     justify-content: space-between;
     margin-top: 30px;
     font-size: 35px;
+    font-family: 'Playfair Display';
 }
 
 
@@ -205,11 +224,13 @@
     text-align: center;
     font-size: 14px;
     margin-top: 30px;
+    font-family: 'Playfair Display';
 }
 
 .little-p {
     font-size: 14px;
     margin-top: 30px;
+    font-family: 'Playfair Display';
 }
 
 .youtube {
@@ -218,16 +239,19 @@
     text-align: center;
     margin-top: 50px;
     font-size: 35px;
+    font-family: 'Playfair Display';
 }
 
 .enquire {
     margin-top: 100px;
     text-align: center;
     font-size: 35px;
+    font-family: 'Playfair Display';
 }
 
 .enquire-p {
     margin-bottom: 30px;
+    font-family: 'Playfair Display';
 }
 
 .divider3 {
@@ -253,13 +277,16 @@
     flex-direction: column;
     text-align: center;
     margin-top: 250px;
+    font-family: 'Playfair Display';
 }
 
 .talktome {
     font-size: 90px;
+    font-family: 'Playfair Display';
 }
 
 .ideas, .collab {
+    font-family: 'Playfair Display';
     font-size:50px
 }
 
@@ -270,6 +297,7 @@
 .collab1 {
     font-size: 14px;
    margin-bottom: 30px;
+   font-family: 'Playfair Display';
 }
 
 .collab2 {
@@ -300,6 +328,7 @@
 
 .checkp {
     letter-spacing: 25px;
+    font-family: 'Rajdhani';
 }
 
 .footer {
@@ -312,6 +341,7 @@
     color: white;
     margin-bottom: 20px;
     font-size: 60px;
+    font-family: 'Playfair Display';
 }
 
 .footer-p {
@@ -320,6 +350,7 @@
    width: 300px;
    position: absolute;
    top: 850px;
+   font-family: 'Cormorant Unicase';
 }
 
 
