--- a/css/style.css
+++ b/css/style.css
@@ -434,3 +434,95 @@
 .ul-li:hover {
     font-size: 30px;
 }
+
+
+/* shop page */
+
+.header-bg2 {
+    background-image: url(../img/bgimage2.jpg);
+    max-width: 1920px;
+    width: 100%;
+    height: 1080px;
+    position: relative;
+}
+
+.allcollection {
+    position: absolute;
+    color: white;
+    font-size: 100px;
+    top: 40%;
+    left: 10%;
+    font-family: 'Playfair Display';
+}
+
+
+.shop {
+    max-width: 1920px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 100px;
+}
+
+.shopby {
+    font-size:76px;
+    text-decoration: underline;
+    padding-top: 30px;
+    font-family: 'Playfair Display';
+}
+
+.findhere {
+    font-size: 20px;
+    letter-spacing: 30px;
+    max-width: 500px;
+    width: 100%;
+    text-align: center;
+    padding: 30px;
+    line-height: 2;
+    font-family: 'Rajdhani';
+}
+
+.plus {
+    height: 40px;
+    width: 40px;
+}
+
+.shopblazer {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 100px;
+    font-family: 'Cormorant Unicase';
+}
+
+.image11, .image12, .image1-earring, .image15 {
+    width: 600px;
+
+}
+
+.blazer-text, .glass-text, .bra-text, .earring-text{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+.text-plus {
+    width: 30px;
+    height: 30px;
+}
+
+.shopblazer-h5, .bra-earring-h5 {
+    font-size: 28px;
+    margin-bottom: 10px;
+}
+
+.bra-earring {
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-around;
+    font-family: 'Cormorant Unicase';
+}
+
+.image13 {
+    width: 600px;
+    height: 762px ;
+}
