--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@
     font-family: 'Playfair Display';
 }
 
+.li-a {
+    color: white;
+}
+
 .aboutsarah {
     position: absolute;
     color: white;
