--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
 
 .li-a {
     color: white;
+    text-decoration: none;
 }
 
 .aboutsarah {
@@ -530,3 +531,121 @@
     width: 600px;
     height: 762px ;
 }
+
+
+
+/* contact page */
+
+#fname {
+    width: 200px;
+    height: 50px;
+    margin-right: 100px;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: #FA6A18 ;
+    outline: none;
+    font-size: 20px;
+}
+
+#email {
+    width: 200px;
+    height: 50px;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: #FA6A18 ;
+    outline: none;
+    font-size: 20px;
+}
+
+
+#subject {
+    display: block;
+    width: 500px;
+    height: 50px;
+    margin-top: 50px;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: #FA6A18 ;
+    outline: none;
+    font-size: 20px;
+}
+   
+
+
+#message {
+    display: block;
+    width: 500px;
+    height: 300px;
+    margin-top: 50px;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: #FA6A18 ;
+    outline: none;
+    font-size: 20px;
+}
+
+
+.forms-div {
+    max-width: 550px;
+    height: 895px;
+    width: 100%;
+    position: absolute;
+    top: 50px;
+    left: 100px; 
+    position: absolute;
+    z-index: 2;
+}
+
+.contact-body {
+    position: relative;
+    background-color: #E8E8E8;
+}
+
+
+.image16 {
+    position: absolute;
+    width: 300px;
+    right: 10px;
+    border-radius: 10px;
+}
+
+.image17 {
+    position: absolute;
+    border-radius: 20px;
+    right: 280px;
+    width: 300px;
+    top: 120px;
+    z-index: 1;
+}
+ .image18 {
+     position: absolute;
+     width: 500px;
+     top: 450px;
+     border-radius: 10px;
+     right: 50px;
+ }
+
+ .send-button {
+     width: 200px;
+     height: 50px;
+     background-color:#FA6A18  ;
+     border-radius: 20px;
+     margin: 0 auto;
+     margin-top: 50px;
+     position: relative;
+ }
+
+ .send {
+      font-size: 20px;
+      color: white;
+    
+ }
+
+
+ .aaa {
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+
+ }
