--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 1080px;
     background-image: url(../img/bgimage1.jpg);
+    background-size: cover;
     position: relative;
 }
  
@@ -629,7 +630,7 @@
      width: 200px;
      height: 50px;
      background-color:#FA6A18  ;
-     border-radius: 20px;
+     border-radius: 41% 59% 37% 63% / 46% 24% 76% 54% ;
      margin: 0 auto;
      margin-top: 50px;
      position: relative;
@@ -642,10 +643,15 @@
  }
 
 
- .aaa {
+ .send-div {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
 
  }
+
+
+
+
+ 
