--- a/css/style.css
+++ b/css/style.css
@@ -629,8 +629,8 @@
  .send-button {
      width: 200px;
      height: 50px;
-     background-color:#FA6A18  ;
-     border-radius: 41% 59% 37% 63% / 46% 24% 76% 54% ;
+     /* background-color:#FA6A18  ;
+     border-radius: 41% 59% 37% 63% / 46% 24% 76% 54% ; */
      margin: 0 auto;
      margin-top: 50px;
      position: relative;
@@ -643,7 +643,7 @@
  }
 
 
- .send-div {
+ #button {
      position: absolute;
      top: 50%;
      left: 50%;
