--- a/css/responsive.css
+++ b/css/responsive.css
@@ -303,3 +303,13 @@
         width: 230px;
     }
 }
+
+@media (max-width:853px) {
+    .nav-ul {
+        display: none;
+    }
+
+    .container {
+        display: block;
+    }
+}
