--- a/css/style.css
+++ b/css/style.css
@@ -578,6 +578,10 @@
 
 
 /* contact page */
+.li-a-c {
+    color: white;
+}
+
 
 #fname {
     width: 200px;
@@ -629,6 +633,7 @@
 
 
 .forms-div {
+    margin-top: 100px;
     max-width: 550px;
     height: 895px;
     width: 100%;
@@ -641,7 +646,7 @@
 
 .contact-body {
     position: relative;
-    background-color: #E8E8E8;
+    background-color: black;
 }
 
 
@@ -697,5 +702,66 @@
 
 
 
+ /* burger icon  */
 
- 
+ .container {
+	position: relative;
+    display: none;
+ }
+
+
+/* რაც გამოდის ბურგერ დაჭერის დროს - overlay */
+.nav-bar {
+	position: absolute;
+	background-color: #122;
+	top: 0;
+	right: 100%;
+	height: 100vh;
+	width: 250px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.toggle {
+	left: 0;
+}
+/* listebis gastilva */
+.nav-list-item {
+	text-align: center;
+	padding: 10px 0;
+}
+
+.nav-link {
+	color: #fff;
+	font-size: 22px;
+}
+
+/* Burger icon styles */
+.toggle-menu {
+	position: fixed;
+	top: 20px;
+	right: 20px;
+	width: 40px;
+	height: 30px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+    padding: 2px 2px 2px 3px;
+	cursor: pointer;
+}
+.line {
+	width: 100%;
+	height: 3px;
+	background-color: white;
+	transition: transform 0.2s ease-out;
+}
+.toggle .line1 {
+	transform: scale(0.9) rotate(-45deg) translate(-6px, 4px);
+}
+.toggle .line2 {
+	display: none;
+}
+.toggle .line3 {
+	transform: scale(0.9) rotate(45deg) translate(-6px, -4px);
+}
+
